<resources>
    <string name="app_name">CryptoMagic</string>
    <string name="search_token">Search token...</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="unlock_wallet">Unlock Wallet</string>
    <string name="create_a_new_wallet">Create a new wallet</string>
    <string name="two_fa_security_check">2FA Security Check</string>
    <string name="please_scan_your_personal_qr_code_to_verify_your_identity">Please scan your personal QR code to verify your identity.</string>
    <string name="start_camera">Start Camera</string>
    <string name="cancel_login">Cancel Login</string>
    <string name="operation_type">Operation Type</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="quantity">Quantity</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="date_of_transaction">Date of transaction</string>
    <string name="total_value">Total Value</string>
    <string name="platform_optional">Platform (optional)</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="volume">Volume</string>
    <string name="total_profit_loss">Total Profit/Loss</string>
    <string name="spot_value">Spot Value</string>
    <string name="operations">Operations</string>
    <string name="save_operation">Save Operation</string>
    <string name="info">Info</string>
</resources>